MA-16 Fix issue when "View price breakdown" was not fitting into one line

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -679,9 +679,6 @@ reservation-hotel-details {
           color: #aaa;
         }
       }
-      .table-expand {
-        min-width: 106px;
-      }
       .breakdown-toggle {
         width: 100%;
         padding: 0 20px;
